# aml

./: .gitattributes  .gitignore  README.md  doxygen_config_file  set_env.bash  set_env.sh  ter temp
aml/: package.xml
aml_ar/: CMakeLists.txt  package.xml
aml_assets/gazebo_files/aml_baxter_gazebo/: CMakeLists.txt  package.xml
aml_assets/gazebo_files/aml_baxter_gazebo/launch/: baxter_world.launch
aml_assets/gazebo_files/aml_baxter_gazebo/src/: aml_baxter_gazebo_ros_control_plugin.cpp
aml_assets/urdf_descriptions/aml_baxter_description/: CMakeLists.txt  package.xml  readme.txt
aml_assets/urdf_descriptions/aml_baxter_description/meshes/soft_hand_adapter/: baxter_wrist_pisa_hand_adapter.STL
aml_assets/urdf_descriptions/aml_baxter_description/scripts/: modify_baxter_urdf_hdw.py
aml_assets/urdf_descriptions/aml_baxter_description/urdf/: baxter.urdf
aml_assets/urdf_descriptions/aml_baxter_description/urdf_addendums/: left_end_effector.urdf.xacro
aml_calib/: CMakeLists.txt  package.xml  setup.py
aml_calib/include/marker_odometry/: aruco_utils.h
aml_calib/launch/: calibrate.launch  camera_pose_estimator.launch  hand_eye_calibration.launch  mapping.launch  marker_odometry.launch  mock_transforms.launch  static_transforms.launch
aml_calib/msg/: MarkerPoseStamped.msg
aml_calib/scripts/: calib_data.npy  camera_calib.py
aml_calib/src/: CameraPoseEstimator.cpp  MarkerOdometryNode.cpp  aruco_ros_utils.cpp
aml_calib/src/aml_calib/: hand_eye_calib.py  hand_eye_calibrator.py  test_hand_eye_calib.py
aml_core/: CMakeLists.txt  package.xml  setup.py
aml_ctrl/: CMakeLists.txt  package.xml  setup.py
aml_data_collec_utils/: CMakeLists.txt  package.xml  setup.py
aml_demos/: CMakeLists.txt  package.xml  setup.py
aml_dl/: CMakeLists.txt  package.xml  setup.py
aml_docker/: Dockerfile_coleman  aml_aliases.sh  bash.sh  baxter_gazebo.sh  build_aml.sh  build_aml_docker.sh  create_net.sh  docker_build.sh  exec_container.sh  get_containerId.bash  get_containerId.sh  mount_host_bash.sh  osx_bridge_display.sh  pr2_gazebo.sh  pr2_moveit.sh  pr2_moveit_gazebo.sh  rm_all_containers.sh  rviz.sh  (+4 more)
aml_drivers/aml_drivers/: CMakeLists.txt  package.xml
aml_drivers/aml_pisa_hand/: CMakeLists.txt  package.xml  setup.py
aml_drivers/aml_pisa_hand/launch/: pisa_soft_hand_ros.launch
aml_drivers/aml_pisa_hand/src/: pisa_soft_hand.cpp
aml_drivers/aml_pisa_hand/tests/: test_pisa_soft_hand.py
aml_haptics/aml_phantom_omni/omni_interface/: CMakeLists.txt  package.xml  setup.py
aml_haptics/aml_phantom_omni/omni_interface/src/: phantom_omni.py
aml_haptics/aml_phantom_omni/omni_interface/src/omni_interface/: phantom_omni.py
aml_perception/: CMakeLists.txt  package.xml  setup.py
aml_perception/include/: pcl_processing.h
aml_perception/launch/: aml_perception.launch
aml_perception/msg/: PCLCustomMsg.msg
aml_perception/src/aml_perception/: camera_sensor.py  ft_sensor.py  pcl_processing.cpp  pcl_utils_server.cpp  subs.cpp  test_pcl.cpp
aml_perception/tests/: python_client_test.py  test_camera_sensor.py  test_pcl.cpp
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_hardware/: CMakeLists.txt  package.xml
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_hardware/config/: control.yaml  sawyer_sim_controllers.yaml
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_hardware/launch/: sdk_control.launch
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_hardware/src/: sawyer_emulator.cpp
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_kinematics/: CMakeLists.txt  package.xml
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_kinematics/include/sawyer_sim_kinematics/: arm_kinematics.h  position_kinematics.h
aml_robot/src/aml_robot/sawyer_simulator/sawyer_sim_kinematics/src/: position_kinematics.cpp
aml_sawyer_sim/aml_sawyer_gazebo/: CMakeLists.txt  package.xml
aml_sawyer_sim/aml_sawyer_gazebo/launch/: sawyer_world.launch
aml_sawyer_sim/aml_sawyer_gazebo/src/: sawyer_gazebo_ros_control_plugin.cpp
aml_sawyer_sim/aml_sawyer_sim_description/: CMakeLists.txt  package.xml
aml_sawyer_sim/aml_sawyer_sim_description/launch/: rviz.launch  sawyer.rviz
aml_sawyer_sim/aml_sawyer_sim_description/urdf/: sawyer.transmission.xacro  sawyer.urdf.xacro  sawyer.xacro
aml_sawyer_sim/aml_sawyer_sim_examples/: CMakeLists.txt  package.xml
aml_sawyer_sim/aml_sawyer_sim_examples/models/block/: model.urdf
aml_sawyer_sim/aml_sawyer_sim_examples/scripts/: gravity_compensation_test.py  ik_pick_and_place.py  joint_position_keyboard.py  joint_position_wobble.py
aml_sawyer_sim/aml_sawyer_simulator/: CMakeLists.txt  package.xml
aml_sawyer_sim/sawyer_gazebo/: CMakeLists.txt  package.xml
aml_sawyer_sim/sawyer_gazebo/launch/: sawyer_world.launch
aml_sawyer_sim/sawyer_gazebo/src/: intera_gripper_ros_control_plugin.cpp  sawyer_gazebo_ros_control_plugin.cpp
aml_sawyer_sim/sawyer_gazebo/worlds/: sawyer_world.world
aml_sawyer_sim/sawyer_sim_controllers/: CMakeLists.txt  package.xml
aml_sawyer_sim/sawyer_sim_controllers/config/: sawyer_sim_controllers_plugins.xml
aml_sawyer_sim/sawyer_sim_controllers/include/sawyer_sim_controllers/: sawyer_gripper_controller.h
aml_sawyer_sim/sawyer_sim_controllers/src/: sawyer_effort_controller.cpp  sawyer_gripper_controller.cpp
aml_sawyer_sim/sawyer_sim_description/: CMakeLists.txt  package.xml
aml_sawyer_sim/sawyer_sim_description/urdf/: sawyer.transmission.xacro  sawyer.urdf.xacro  sawyer.xacro  sawyer_stand.urdf.xacro
aml_sawyer_sim/sawyer_sim_examples/: CMakeLists.txt  package.xml  setup.py
aml_sawyer_sim/sawyer_sim_examples/models/block/: model.urdf
aml_sawyer_sim/sawyer_sim_examples/scripts/: gravity_compensation_test.py  ik_pick_and_place.py
aml_sawyer_sim/sawyer_sim_kinematics/: CMakeLists.txt
aml_sawyer_sim/sawyer_sim_kinematics/include/sawyer_sim_kinematics/: arm_kinematics.h  position_kinematics.h
aml_sawyer_sim/sawyer_sim_kinematics/launch/: sawyer_sim_kinematics.launch
aml_sawyer_sim/sawyer_sim_kinematics/src/: arm_kinematics.cpp  position_kinematics.cpp
aml_sawyer_sim/sawyer_simulator/: package.xml
(+3944 files in other folders)
