<?xml version="1.0"?>
<package>
  <name>aml</name>
  <version>0.0.0</version>
  <description>The Active Manipulation Learning (AML) package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="exa371@bham.ac.uk">Ermano Arruda</maintainer>
  <maintainer email="mjm522@bham.ac.uk">Michael Jacob</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/manipulation</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="exa371@bham.ac.uk">Ermano Arruda</author>
  <author email="mjm522@bham.ac.uk">Michael Jacob</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>aml_robot</run_depend>
  <run_depend>aml_io</run_depend>
  <run_depend>aml_lfd</run_depend>
  <run_depend>aml_ctrl</run_depend>
  <run_depend>aml_data_collec_utils</run_depend>
  <run_depend>aml_dl</run_depend>
  <run_depend>aml_perception</run_depend>
  <run_depend>aml_calib</run_depend>

  <export>
   <metapackage/>
  </export>
</package>

