<?xml version="1.0"?>
<package>
  <name>aml_sawyer_gazebo</name>
  <version>0.0.0</version>
  <description>aml_sawyer_gazebo</description>

  <maintainer email="ahayashi@todo.todo">ahayashi</maintainer>
  <maintainer email="exa371@bham.ac.uk">Ermano Arruda</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_manager_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
