<?xml version="1.0"?>
<package>
  <name>sawyer_sim_description</name>
  <version>0.0.0</version>
  <description>sawyer_sim_description</description>

  <maintainer email="ahayashi@todo.todo">ahayashi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
