<?xml version="1.0"?>
<package>
  <name>sawyer_sim_examples</name>
  <version>0.0.0</version>
  <description>The sawyer_sim_examples</description>

  <maintainer email="ahayashi@todo.todo">ahayashi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>sawyer_gazebo</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>sawyer_gazebo</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
 
  <export>
  </export>

</package>
