<?xml version="1.0"?>
<package>
  <name>sawyer_sim_hardware</name>
  <version>0.0.0</version>
  <description>sawyer_sim_hardware</description>

  <maintainer email="ahayashi@todo.todo">ahayashi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sawyer_sim_kinematics</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sawyer_sim_kinematics</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
