<?xml version="1.0"?>
<package>
  <name>sawyer_sim_kinematics</name>
  <version>0.0.0</version>
  <description>sawyer_sim_kinematics</description>

  <maintainer email="ahayashi@todo.todo">ahayashi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>

  <run_depend>kdl_parser</run_depend>

</package>


